--- a/design-1/index.html
+++ b/design-1/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Pillar.</title>
+	<title>Pillar | First Template by KK</title>
 	<link rel="stylesheet" type="text/css" href="datas/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="datas/css/styles.css">
 </head>
