--- a/design-1/index.html
+++ b/design-1/index.html
@@ -16,7 +16,7 @@
 				<li class="dropmenu">
 					<a href="#">HOME</a>
 					<ul>
-							<li><a href="#">HOME</a></li>
+							<li><a href="#">Kiraak</a></li>
 							<li><a href="#">HOME</a></li>
 							<li><a href="#">HOME</a></li>
 							<li><a href="#">HOME</a></li>
