--- a/design-1/index.html
+++ b/design-1/index.html
@@ -12,57 +12,46 @@
 	<!-- Navbar...starts heres.... -->
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
-			<ul class="menu">
-				<li class="dropmenu">
-					<a href="#">HOME</a>
-					<ul>
-							<li><a href="#">Kiraak</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-					</ul>
-				</li>
-				<li>
-						<a href="#">SHOP</a>
-						<ul>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-						</ul>
-				</li>
-				<li>
-					<a href="#">WORK</a>
-					<ul>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-					</ul>
-				</li>
-				<li>
-					<a href="#">BLOG</a>
-					<ul>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-							<li><a href="#">HOME</a></li>
-					</ul>
-				</li>
-			</ul>
+    		<div class="navbar-header">
+      			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+      			</button>
+    			<a class="navbar-brand" href="#">Pillar...</a>
+    		</div>
+	    	<div class="collapse navbar-collapse" id="myNavbar">
+		    	<ul class="nav navbar-nav">
+		        	<li><a href="#" id="H">HOME</a>
+		        		<ul class="nav">
+		        			<li><a href="#">HOME</a></li>
+					        <li><a href="#">HOME</a></li>
+					        <li><a href="#">HOME</a></li>
+					        <li><a href="#">HOME</a></li>
+					        <li><a href="#">HOME</a></li>
+		        		</ul>		        		
+		        	</li>
+		        	<li><a href="#">PAGES</a></li>
+			        <li><a href="#">WORKS</a></li>
+			        <li><a href="#">SHOP</a></li>
+			        <li><a href="#">BLOG</a></li>
+			        <li><a href="#">ELEMENTS</a></li>
+		        	<li class="dropdown">
+		        		<a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+		        		<ul class="dropdown-menu">
+				            <li><a href="#">Page 1-1</a></li>
+				            <li><a href="#">Page 1-2</a></li>
+				            <li><a href="#">Page 1-3</a></li>
+		          		</ul>
+		        	</li>
+			        
+		    	</ul>		      	
+	    	</div>
 		</div>
 	</nav>
 	<!-- navbar ends here.... -->
 	<!-- pillar....... -->
-	<div class="container-fluid">
+	<div class="container-fluid text-center">
 		<div class="row">
 			<div class="col-md-12">
 				<aside class="text-center">
@@ -121,7 +110,7 @@
 			</div>		
 			<div class="container text-center">				  
 				<div class="row">
-				    <div class="col-sm-4 col-sm-6 box-i">
+				    <div class="col-sm-4 col-sm-4 box-i">
 				    	<div class="conteiner-fluid">
 				    		<div class="row">
 				    			<div class="col-md-12">
@@ -136,11 +125,11 @@
 								</div>
 							</div>
 				    	</div>
+				    </div><div></div>
+				    <div class="col-sm-4 col-sm-4">
+				    	<img src="datas/images/device2.png" class="img-responsive" style="width:100%" alt="Image">	      
 				    </div>
-				    <div class="col-sm-4 col-sm-3">
-				    	<img src="datas/images/device2.png" class="img-responsive" style="width:100%" alt="Image">				      
-				    </div>
-				    <div class="col-sm-4 col-sm-6 box-i">
+				    <div class="col-sm-4 col-sm-4 box-i">
 				    	<div class="conteiner-fluid">
 				    		<div class="row">
 				    			<div class="col-md-12">
@@ -159,8 +148,8 @@
 				</div>
 			</div>
 		</div><br><br>
-		<div class="row blackd text-center">			
-			<h3>Screenshot Showcase</h3>			
+		<div class="row blackd">			
+			<h3 id="screentext">Screenshot Showcase</h3>			
 			<div class="container">
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 b-item">
 					<img src="datas/images/app-screenshot-1.jpg" class="img-responsive" alt="screenshot-1">
@@ -201,23 +190,25 @@
 				<img src="datas/images/device1.png" class="img-responsive">
 			</div>
 		</div>
-	</div>
-	<!-- <div class="container">
-  <h1>Medium Grid</h1>
-  <p>The following example will result in a 50%/50% split on medium and large devices. On small (and extra small) devices, it will automatically stack (100%).</p>
-  <p>Resize the browser window to see the effect.</p>
-  <div class="row">
-    <div class="col-md-5 col-md-offset-1 col-sm-offset-1" style="background-color:yellow;">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </div>
-    <div class="col-md-5 col-md-offset-1 col-sm-offset-1" style="background-color:pink;">
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-    </div>
-  </div>
-</div>
- -->
-
+		<div class="row">
+			<div class="col-md-5 col-md-offset-1">
+				<h3>Keep Informed</h3>
+				<h1><small>Subscribe for free resources and news updates.</small></h1>
+				<form role="form">
+			    	<div class="form-group">
+			    		<label for="email">Email:</label>
+			    		<input type="email" placeholder="Enter email">
+			    	</div>
+			    	<div class="form-group">
+			    		<label for="pwd">Password:</label>
+			    		<input type="password" placeholder="Enter password">
+			    	</div>	   
+			    	<button type="submit" class="btn btn-default">Submit</button>
+				</form>
+			</div>
+		</div>
+	</div>	
+	
 
 
 	<script type="text/javascript" src="datas/js/jquery.min.js"></script>
