--- a/design-1/index.html
+++ b/design-1/index.html
@@ -51,7 +51,7 @@
 	</nav>
 	<!-- navbar ends here.... -->
 	<!-- pillar....... -->
-	<div class="container-fluid text-center">
+	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
 				<aside class="text-center">
@@ -148,63 +148,116 @@
 				</div>
 			</div>
 		</div><br><br>
-		<div class="row blackd">			
+		<div class="row blackd text-center">			
 			<h3 id="screentext">Screenshot Showcase</h3>			
 			<div class="container">
-				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 b-item">
-					<img src="datas/images/app-screenshot-1.jpg" class="img-responsive" alt="screenshot-1">
+				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="3"></li>
+			</ol>
+			<div class="carousel-inner" role="listbox">
+				<div class="carousel-item active">
+					<img src="datas/images/app-screenshot-1.jpg" class="img-responsive" alt="First slide">
 				</div>
-				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 b-item">
-					<img src="datas/images/app-screenshot-2.jpg" class="img-responsive" alt="screenshot-2">
+				<div class="carousel-item">
+					<img src="datas/images/app-screenshot-2.jpg" class="img-responsive" alt="Second slide">
 				</div>
-				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 b-item">
-					<img src="datas/images/app-screenshot-3.jpg" class="img-responsive" alt="screenshot-3">
+				<div class="carousel-item">
+					<img src="datas/images/app-screenshot-3.jpg" class="img-responsive" alt="Third slide">
 				</div>
-				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 b-item">
-					<img src="datas/images/app-screenshot-4.jpg" class="img-responsive" alt="screenshot-4">
+				<div class="carousel-item">
+					<img src="datas/images/app-screenshot-4.jpg" class="img-responsive" alt="Forth slide">
 				</div>
 			</div>
+			<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+				<span class="icon-prev" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+				<span class="icon-next" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
 		</div>
-	</div>
-	<br>
-	<br>
-	<br>
+			</div>
+		</div>	
+		<br>
+		<br>
+		<br>
 	<!-- screen shot body -->	
-	<div class="container text-center">
-		<h2 class="text-x">Bold,Simple,Rubust.</h2>
-		<h2><small>Pillar features a bevvy of content blocks and layouts to create your website.</small></h2>
-		<div class="row">			
-			<div class="col-md-5 col-sm-6 col-xs-12 box-x1">
-				<i class="glyphicon glyphicon-thumbs-up icon-x1"></i>
-				<header>BEAUTIFULLY RESPONSIVE</header>
-				<h3>Every one of Pillar’s stylish blocks are fully responsive,meaning that your site shines - regardless of the device your users are viewing from.</h3>
+		<div class="container text-center">
+			<h2 class="text-x">Bold,Simple,Rubust.</h2>
+			<h2><small>Pillar features a bevvy of content blocks and layouts to create your website.</small></h2>
+			<div class="row">			
+				<div class="col-md-5 col-sm-6 col-xs-12 box-x1">
+					<i class="glyphicon glyphicon-thumbs-up icon-x1"></i>
+					<header>BEAUTIFULLY RESPONSIVE</header>
+					<h3>Every one of Pillar’s stylish blocks are fully responsive,meaning that your site shines - regardless of the device your users are viewing from.</h3>
+				</div>
+				<div class="col-md-5 col-sm-6 col-xs-12 box-x1">
+					<i class="glyphicon glyphicon-user icon-x1"></i>
+					<header>SIX MONTHS FREE SUPPORT</header>
+					<h3>Every one of Pillar’s stylish blocks are fully responsive,meaning that your site shines - regardless of the device your users are viewing from.</h3>
+				</div>						
 			</div>
-			<div class="col-md-5 col-sm-6 col-xs-12 box-x1">
-				<i class="glyphicon glyphicon-user icon-x1"></i>
-				<header>SIX MONTHS FREE SUPPORT</header>
-				<h3>Every one of Pillar’s stylish blocks are fully responsive,meaning that your site shines - regardless of the device your users are viewing from.</h3>
-			</div>						
+			<div class="row">
+				<div class="col-md-12 col-sm-12 col-xs-12">
+					<img src="datas/images/device1.png" class="img-responsive">
+				</div>
+			</div>
+			<!-- form row starts..here -->
+			<div class="row">
+				<div class="col-md-5 col-md-offset-1 sub-form">
+					<h3>Keep Informed</h3>
+					<h1><small>Subscribe for free resources and news updates.</small></h1>
+					<form role="form">
+				    	<div class="form-group">
+				    		<label for="text">USER NAME:</label><br>
+				    		<input type="text" placeholder="User Name">
+				    	</div>
+				    	<div class="form-group">
+				    		<label for="pwd">EMAIL ADDRESS:</label><br>
+				    		<input type="email" placeholder="Email Address">
+				    	</div>	   
+				    	<button type="submit" class="btn btn-default btn-s">Subcribe</button>
+					</form>
+				</div>
+				<div class="col-md-5 col-md-offset-1 ">
+					<div class="side-form">
+						<p>FREE RESOURCES</p>
+						<h3>Our team of designers give back with mockups, logos and tons more.</h3>
+					</div>
+					<div class="side-form">
+						<p>EXPERT INTERVIEWS</p>
+						<h3>We speak with some of the web’s foremost designers and developers on a range of topics.</h3>
+					</div>	
+					<div class="side-form">
+						<p>MONTHLY PRIZES</p>
+						<h3>As if the free resources weren’t enough - we give away a sweet design stash each month.</h3>
+					</div>				
+				</div>
+			</div><!-- end form div.... -->			
 		</div>
 		<div class="row">
-			<div class="col-md-12 col-sm-12 col-xs-12">
-				<img src="datas/images/device1.png" class="img-responsive">
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-5 col-md-offset-1">
-				<h3>Keep Informed</h3>
-				<h1><small>Subscribe for free resources and news updates.</small></h1>
-				<form role="form">
-			    	<div class="form-group">
-			    		<label for="email">Email:</label>
-			    		<input type="email" placeholder="Enter email">
-			    	</div>
-			    	<div class="form-group">
-			    		<label for="pwd">Password:</label>
-			    		<input type="password" placeholder="Enter password">
-			    	</div>	   
-			    	<button type="submit" class="btn btn-default">Submit</button>
-				</form>
+			<div class="image-y">
+				<div class="container">
+					<div class="col-md-10 col-md-offset-1">
+						<a href="#" class="btn down-load">
+							<span class="btn">
+								<i class="glyphicon glyphicon-apple"></i>
+								DOWNLOAD FOR Ios
+							</span>
+						</a>
+						<a href="#" class="btn down-load">
+							<span class="btn">
+								<i class="glyphicon glyphicon-play"></i>
+								DOWNLOAD FOR ANDROID
+							</span>
+						</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>	
