--- a/desing-2/index2.html
+++ b/desing-2/index2.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>e-commerce</title>
+		<title>e-commerce Templates</title>
 		<link rel="stylesheet" type="text/css" href="datas/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="datas/assets/font-awesome-4.6.3/css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="datas/css/styles-2.css">
